# drf_coursework

./: .coverage  .env.sample  pyproject.toml
config/: settings.py  urls.py
habits/: models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_frequency.py  0003_habit_tg_chat_id.py  0004_remove_habit_tg_chat_id.py  0005_habit_date.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id.py
